# kie-v3

./: .gitignore  .gitmodules  .kie_product_repo  AUTONOMY_LOG.md  CHART_EXCELLENCE_IMPLEMENTATION_COMPLETE.md  CHART_EXCELLENCE_PLAN.md  CHART_TYPE_AUDIT.md  CLAUDE.md  CLI_FIX.md  CONSULTANT_QUALITY_VERIFICATION.md  CONSULTANT_QUICKSTART.md  CONSULTANT_UX_IMPLEMENTATION_SUMMARY.md  DATA_TYPE_ROBUSTNESS.md  DATA_TYPE_ROBUSTNESS_VALIDATION.md  FINAL_DELIVERABLES_QUALITY_REPORT.md  GIT_DIFF_SUMMARY.md  HOW_TO_USE_RALPH.md  IMPLEMENTATION_COMPLETE.md  INTELLIGENCE_ENGINE_SUMMARY.md  KIE_100_PERCENT_FUNCTIONAL_REPORT.md  KIE_HEALTH_ASSESSMENT_2026-01-13.md  KIE_STALE_INSTALLATION_ISSUE.md  LLM_POWERED_STORY_SYSTEM.md  MANIFEST.in  OUTSTANDING_ITEMS_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_6_RENDERERS_COMPLETE.md  RAILS_ARCHITECTURE.md  RALPH_COMPLETION_REPORT.md  RALPH_PROMPT.md  RALPH_QUICK_START.md  RALPH_SETUP.md  README.md  REMEDIATION_PLAN.md  REPO_CLEANUP_SUMMARY.md  STORY_ARCHITECTURE_INTEGRATION.md  STORY_DATA_ROBUSTNESS.md  STORY_FIRST_COMPLETE_SUMMARY.md  STORY_FIRST_REBUILD.md  (+10 more)
.claude/commands/: analyze.md  build.md  eda.md  interview.md  interview_v3.md  preview.md  startkie.md  status.md
.github/workflows/: ci.yml  kds-compliance.yml
.serena/: project.yml
.serena/memories/: architectural_understanding.md  code_structure.md  code_style_conventions.md  project_purpose.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
design_system/: CLAUDE_CODE_INSTRUCTIONS.md  KDS_AI_GUIDELINES.md  KEARNEY_DESIGN_SYSTEM.md
design_system/styles/: fonts.css  theme.css
docs/: CC_RAILS_CONTRACT.md  CHART_CONTRACT.md  CLAUDE_COMMANDS.md  CLEANUP_PHASE1_REPORT.md  CLEANUP_PHASE2_TEST_TRIAGE.md  CONSULTANT_QUICKSTART.md  DASHBOARD_UI_COMPLETE.md  KDS_COMPLIANCE_REPORT_V3.md  KIE_V3_ARCHITECTURE.md  KIE_V3_ROADMAP.md  PRODUCTION_VERIFICATION.md  RELEASE_CHECKLIST.md  REPO_STRUCTURE.md  SKILLS_AND_HOOKS_CONTRACT.md  TECH_DEBT_TESTS.md  THEME_SYSTEM.md  V3_COMPLETE_SUMMARY.md  V3_SEPARATION_PLAN.md  kds_audit_2026-01-07.md  kds_audit_summary.md
examples/: README.md  advanced_charts.py  basic_charts.py  data_intelligence.py  story_renderer_demo.py  validation_example.py
kie/: __init__.py  base.py  cli.py  config.py  exceptions.py  execution_policy.py  paths.py  preferences.py
kie/api/: main.py
kie/brand/: colors.py  theme.py  typography.py  validator.py
kie/charts/: __init__.py  factory.py  formatting.py  renderer.py  schema.py  svg_renderer.py  theme_config.py
kie/cli/: __init__.py  __main__.py  workspace.py
kie/commands/: __init__.py  enumerate.py  handler.py  railscheck.py
kie/config/: theme_config.py
kie/consultant/: __init__.py  insight_brief.py  next_steps.py  run_story.py
kie/data/: __init__.py  eda.py  loader.py  profile.py
kie/export/: __init__.py  dashboard_template.tsx  dashboard_template_kds.tsx  react_builder.py  react_builder_v2.py  streamlit_builder.py  streamlit_builder_fixed.py
kie/formatting/: field_registry.py  output.py
kie/geo/: README.md  __init__.py  export.py  fips.py  models.py  pipeline.py  utils.py
kie/insights/: __init__.py  engine.py  intelligence.py  schema.py  (+1 more)
project_template/: .gitignore  CLAUDE.md  README.md
scripts/: check_invariants.py  clean_junk.sh  verify_fresh_project_eda.sh  whereami.sh
tests/: __init__.py  conftest.py  proof_actionability_scoring.py  proof_appendix_separation.py  proof_chart_rendering.py  proof_client_pack.py  proof_client_readiness.py  proof_consultant_voice.py  proof_dashboard_manifest_render.py  proof_decision_brief.py  proof_deliverables_pack.py  proof_eda_analysis_bridge.py  proof_eda_review.py  proof_eda_synthesis.py  proof_enforcement.py  proof_executive_summary.py  proof_first_run_experience.py  proof_freeform_bridge.py  proof_freeform_mode.py  proof_fresh_workspace_commands.py  proof_golden_path.py  proof_insight_triage.py  proof_insight_triage.py.bak  proof_intent_command_wrapped.py  proof_intent_gate.py  proof_mode_gate.py  proof_narrative_synthesis.py  proof_node_provider.py  proof_output_theme.py  proof_ppt_storyboard_composition.py  proof_recovery_ladder.py  proof_sampledata_command.py  proof_showcase_mode.py  proof_skills_realization.py  proof_story_manifest_alignment.py  proof_theme_noninteractive.py  proof_trust_bundle.py  proof_truth_gate.py  proof_visual_patterns.py  proof_visual_qc.py  (+100 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js
(+212 files in other folders)
