[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kie"
version = "3.0.0"
description = "Kearney Insight Engine - AI-powered consulting deliverable generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kearney", email = "noreply@kearney.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "python-pptx>=0.6.21",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "importlib-resources>=5.0; python_version<'3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.scripts]
kie = "kie.cli.workspace:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kie*"]

[tool.setuptools.package-data]
kie = [
    "templates/commands/*.md",
    "templates/project_template/*.md",
    "templates/project_template/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
